2005-07-20  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c : Add ssh "reaper" thread to collect exit status
	  of all ssh commands and print any nonzero exit codes at end of pdsh run.
	  No longer invoke ssh backgrounded, as this is no longer needed since
	  pdsh now reaps these processes.

2005-07-19  Mark Grondona <mgrondona@llnl.gov>

	* src/common/xmalloc.h, src/common/xmalloc.c : Strdup takes const arg.

	* src/modules/mqcmd.c (mqcmd) : Fail gracefully if munge_ctx_create
	  returns NULL.


2005-07-15  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (dsh) : Be sure to handle error conditions on file
	  descriptors when returning from xpoll(). (fixes pdsh hang on OS X
	  as reported by Andrina Kelly <andrina@corefa.com>).

2005-05-31  Mark Grondona <mgrondona@llnl.gov>
	
	* src/pdsh/dsh.c (dsh) : Don't call _increase_nofile_limit() until after 
	  mod_rcmd_init().

2005-05-09  Albert Chu <chu11@llnl.gov>

	* : Added genders querying support to -g and -X options.

	* src/modules/genders.c (genders_init): New function.

	* src/modules/genders.c (genders_fini): Call lt_dlclose
	  appropriately.  Fix prototype to match ModExitF type and return 0.
	
	* src/modules/genders.c (_read_genders_attr): Modified
	  appropriately to call genders_query if it is available.
	
	* src/modules/genders.c (_read_genders): Renamed 'attr' local var
	  to 'query'.  

	* doc/pdsh.1.in: Updated information on -g and -X options
	  appropriately.

2005-03-28  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_qshell.m4, config/ac_mqshell.m4 : Abort configure script 
	  when --with-qshell or --with-mqshell is supplied and PAM support
	  cannot be found (instead of silently deactivating these options).

	* Makefile.am : Remove redundant install and uninstall hooks from top-
	  level Makefile. (reported by Tsung-i Mark Huan <tihuang@cs.uh.edu>)

2005-03-18  Mark Grondona <mgrondona@llnl.gov>

	* README.QsNet : Add reference to Quadrics' pdsh FAQ.
