@@ -4,7 +4,6 @@
 ## Process this file with automake to produce Makefile.in.
 ##****************************************************************************
 
-include $(top_srcdir)/config/Make-rpm.mk
 include $(top_srcdir)/config/Make-inc.mk
 
 ACLOCAL_AMFLAGS =              -I config
